src/main/java/com/scratbai/qmtemplate/QMTemplateParser.java
// Generated from /home/baifuyou/IdeaProjects/QMTemplate/src/main/resources/qmtemplate/QMTemplateParser.g4 by ANTLR 4.5.1
package com.scratbai.qmtemplate;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QMTemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_BRACE=1, PLANE_TEXT=2, ESC=3, RIGHT_BRACE=4, RIGHT_BRACKET=5, LEFT_BRACKET=6, 
		RIGHT_SQUARE_BRACKET=7, LEFT_SQUARE_BRACKET=8, DOT=9, EQUAL=10, DEQUAL=11, 
		NOT_EQUAL=12, NOT=13, AND=14, DAND=15, OR=16, DOR=17, NEW_LINE=18, EACH=19, 
		END=20, IF=21, ELSE=22, IN=23, GT=24, LT=25, GTE=26, LTE=27, COMMA=28, 
		FLOAT=29, INT=30, STRING=31, BOOLEAN=32, ID=33, WS=34;
	public static final int
		RULE_template = 0, RULE_originText = 1, RULE_renderExpr = 2, RULE_blockEnd = 3, 
		RULE_evlExpr = 4, RULE_methodInvoke = 5, RULE_value = 6, RULE_intLiteral = 7, 
		RULE_floatLiteral = 8, RULE_stringLiteral = 9, RULE_ifExpr = 10, RULE_elseIfExpr = 11, 
		RULE_elseExpr = 12, RULE_ifKey = 13, RULE_elseIf = 14, RULE_elseKey = 15, 
		RULE_booleanLiteral = 16, RULE_eachExpr = 17, RULE_each = 18, RULE_id = 19, 
		RULE_in = 20, RULE_eachIndexExpr = 21;
	public static final String[] ruleNames = {
		"template", "originText", "renderExpr", "blockEnd", "evlExpr", "methodInvoke", 
		"value", "intLiteral", "floatLiteral", "stringLiteral", "ifExpr", "elseIfExpr", 
		"elseExpr", "ifKey", "elseIf", "elseKey", "booleanLiteral", "eachExpr", 
		"each", "id", "in", "eachIndexExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", null, null, "'}'", "')'", "'('", "']'", "'['", "'.'", "'='", 
		"'=='", "'!='", "'!'", "'&'", "'&&'", "'|'", "'||'", "'\n'", "'each'", 
		"'/end'", "'if'", "'else'", "'in'", "'>'", "'<'", "'>='", "'<='", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LEFT_BRACE", "PLANE_TEXT", "ESC", "RIGHT_BRACE", "RIGHT_BRACKET", 
		"LEFT_BRACKET", "RIGHT_SQUARE_BRACKET", "LEFT_SQUARE_BRACKET", "DOT", 
		"EQUAL", "DEQUAL", "NOT_EQUAL", "NOT", "AND", "DAND", "OR", "DOR", "NEW_LINE", 
		"EACH", "END", "IF", "ELSE", "IN", "GT", "LT", "GTE", "LTE", "COMMA", 
		"FLOAT", "INT", "STRING", "BOOLEAN", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QMTemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QMTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TemplateContext extends ParserRuleContext {
		public List<OriginTextContext> originText() {
			return getRuleContexts(OriginTextContext.class);
		}
		public OriginTextContext originText(int i) {
			return getRuleContext(OriginTextContext.class,i);
		}
		public List<RenderExprContext> renderExpr() {
			return getRuleContexts(RenderExprContext.class);
		}
		public RenderExprContext renderExpr(int i) {
			return getRuleContext(RenderExprContext.class,i);
		}
		public List<IfExprContext> ifExpr() {
			return getRuleContexts(IfExprContext.class);
		}
		public IfExprContext ifExpr(int i) {
			return getRuleContext(IfExprContext.class,i);
		}
		public List<EachExprContext> eachExpr() {
			return getRuleContexts(EachExprContext.class);
		}
		public EachExprContext eachExpr(int i) {
			return getRuleContext(EachExprContext.class,i);
		}
		public List<EachIndexExprContext> eachIndexExpr() {
			return getRuleContexts(EachIndexExprContext.class);
		}
		public EachIndexExprContext eachIndexExpr(int i) {
			return getRuleContext(EachIndexExprContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitTemplate(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(49);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(44);
						originText();
						}
						break;
					case 2:
						{
						setState(45);
						renderExpr();
						}
						break;
					case 3:
						{
						setState(46);
						ifExpr();
						}
						break;
					case 4:
						{
						setState(47);
						eachExpr();
						}
						break;
					case 5:
						{
						setState(48);
						eachIndexExpr();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(51); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OriginTextContext extends ParserRuleContext {
		public TerminalNode PLANE_TEXT() { return getToken(QMTemplateParser.PLANE_TEXT, 0); }
		public OriginTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_originText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterOriginText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitOriginText(this);
		}
	}

	public final OriginTextContext originText() throws RecognitionException {
		OriginTextContext _localctx = new OriginTextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_originText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(PLANE_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RenderExprContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(QMTemplateParser.LEFT_BRACE, 0); }
		public EvlExprContext evlExpr() {
			return getRuleContext(EvlExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(QMTemplateParser.RIGHT_BRACE, 0); }
		public RenderExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_renderExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterRenderExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitRenderExpr(this);
		}
	}

	public final RenderExprContext renderExpr() throws RecognitionException {
		RenderExprContext _localctx = new RenderExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_renderExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(LEFT_BRACE);
			setState(56);
			evlExpr(0);
			setState(57);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockEndContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(QMTemplateParser.LEFT_BRACE, 0); }
		public TerminalNode END() { return getToken(QMTemplateParser.END, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(QMTemplateParser.RIGHT_BRACE, 0); }
		public BlockEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterBlockEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitBlockEnd(this);
		}
	}

	public final BlockEndContext blockEnd() throws RecognitionException {
		BlockEndContext _localctx = new BlockEndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_blockEnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(LEFT_BRACE);
			setState(60);
			match(END);
			setState(61);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EvlExprContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(QMTemplateParser.NOT, 0); }
		public List<EvlExprContext> evlExpr() {
			return getRuleContexts(EvlExprContext.class);
		}
		public EvlExprContext evlExpr(int i) {
			return getRuleContext(EvlExprContext.class,i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(QMTemplateParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(QMTemplateParser.RIGHT_BRACKET, 0); }
		public TerminalNode DOT() { return getToken(QMTemplateParser.DOT, 0); }
		public TerminalNode DEQUAL() { return getToken(QMTemplateParser.DEQUAL, 0); }
		public TerminalNode DAND() { return getToken(QMTemplateParser.DAND, 0); }
		public TerminalNode DOR() { return getToken(QMTemplateParser.DOR, 0); }
		public TerminalNode NOT_EQUAL() { return getToken(QMTemplateParser.NOT_EQUAL, 0); }
		public TerminalNode GT() { return getToken(QMTemplateParser.GT, 0); }
		public TerminalNode LT() { return getToken(QMTemplateParser.LT, 0); }
		public TerminalNode GTE() { return getToken(QMTemplateParser.GTE, 0); }
		public TerminalNode LTE() { return getToken(QMTemplateParser.LTE, 0); }
		public MethodInvokeContext methodInvoke() {
			return getRuleContext(MethodInvokeContext.class,0);
		}
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(QMTemplateParser.LEFT_SQUARE_BRACKET, 0); }
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(QMTemplateParser.RIGHT_SQUARE_BRACKET, 0); }
		public EvlExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_evlExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterEvlExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitEvlExpr(this);
		}
	}

	public final EvlExprContext evlExpr() throws RecognitionException {
		return evlExpr(0);
	}

	private EvlExprContext evlExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		EvlExprContext _localctx = new EvlExprContext(_ctx, _parentState);
		EvlExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_evlExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(64);
				match(NOT);
				setState(65);
				evlExpr(6);
				}
				break;
			case ID:
				{
				setState(66);
				id();
				}
				break;
			case FLOAT:
			case INT:
			case STRING:
			case BOOLEAN:
				{
				setState(67);
				value();
				}
				break;
			case LEFT_BRACKET:
				{
				setState(68);
				match(LEFT_BRACKET);
				setState(69);
				evlExpr(0);
				setState(70);
				match(RIGHT_BRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(74);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(75);
						match(DOT);
						setState(76);
						evlExpr(13);
						}
						break;
					case 2:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(77);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(78);
						match(DEQUAL);
						setState(79);
						evlExpr(11);
						}
						break;
					case 3:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(80);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(81);
						match(DAND);
						setState(82);
						evlExpr(10);
						}
						break;
					case 4:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(83);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(84);
						match(DOR);
						setState(85);
						evlExpr(9);
						}
						break;
					case 5:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(86);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(87);
						match(NOT_EQUAL);
						setState(88);
						evlExpr(8);
						}
						break;
					case 6:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(89);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(90);
						match(GT);
						setState(91);
						evlExpr(6);
						}
						break;
					case 7:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(92);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(93);
						match(LT);
						setState(94);
						evlExpr(5);
						}
						break;
					case 8:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(95);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(96);
						match(GTE);
						setState(97);
						evlExpr(4);
						}
						break;
					case 9:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(98);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(99);
						match(LTE);
						setState(100);
						evlExpr(3);
						}
						break;
					case 10:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(101);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(102);
						match(DOT);
						setState(103);
						methodInvoke();
						}
						break;
					case 11:
						{
						_localctx = new EvlExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_evlExpr);
						setState(104);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(105);
						match(LEFT_SQUARE_BRACKET);
						setState(106);
						evlExpr(0);
						setState(107);
						match(RIGHT_SQUARE_BRACKET);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MethodInvokeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QMTemplateParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(QMTemplateParser.LEFT_BRACKET, 0); }
		public List<EvlExprContext> evlExpr() {
			return getRuleContexts(EvlExprContext.class);
		}
		public EvlExprContext evlExpr(int i) {
			return getRuleContext(EvlExprContext.class,i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(QMTemplateParser.RIGHT_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(QMTemplateParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(QMTemplateParser.COMMA, i);
		}
		public MethodInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodInvoke; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterMethodInvoke(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitMethodInvoke(this);
		}
	}

	public final MethodInvokeContext methodInvoke() throws RecognitionException {
		MethodInvokeContext _localctx = new MethodInvokeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodInvoke);
		int _la;
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(114);
				match(ID);
				setState(115);
				match(LEFT_BRACKET);
				setState(116);
				evlExpr(0);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT_BRACKET) | (1L << NOT) | (1L << FLOAT) | (1L << INT) | (1L << STRING) | (1L << BOOLEAN) | (1L << ID))) != 0)) {
					{
					{
					setState(117);
					evlExpr(0);
					setState(118);
					match(COMMA);
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				match(RIGHT_BRACKET);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(ID);
				setState(128);
				match(LEFT_BRACKET);
				setState(129);
				match(RIGHT_BRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public IntLiteralContext intLiteral() {
			return getRuleContext(IntLiteralContext.class,0);
		}
		public FloatLiteralContext floatLiteral() {
			return getRuleContext(FloatLiteralContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(136);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				intLiteral();
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				floatLiteral();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				stringLiteral();
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				booleanLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntLiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(QMTemplateParser.INT, 0); }
		public IntLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterIntLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitIntLiteral(this);
		}
	}

	public final IntLiteralContext intLiteral() throws RecognitionException {
		IntLiteralContext _localctx = new IntLiteralContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_intLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatLiteralContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(QMTemplateParser.FLOAT, 0); }
		public FloatLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterFloatLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitFloatLiteral(this);
		}
	}

	public final FloatLiteralContext floatLiteral() throws RecognitionException {
		FloatLiteralContext _localctx = new FloatLiteralContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_floatLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringLiteralContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(QMTemplateParser.STRING, 0); }
		public StringLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterStringLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitStringLiteral(this);
		}
	}

	public final StringLiteralContext stringLiteral() throws RecognitionException {
		StringLiteralContext _localctx = new StringLiteralContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stringLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfExprContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(QMTemplateParser.LEFT_BRACE, 0); }
		public IfKeyContext ifKey() {
			return getRuleContext(IfKeyContext.class,0);
		}
		public EvlExprContext evlExpr() {
			return getRuleContext(EvlExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(QMTemplateParser.RIGHT_BRACE, 0); }
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public BlockEndContext blockEnd() {
			return getRuleContext(BlockEndContext.class,0);
		}
		public List<ElseIfExprContext> elseIfExpr() {
			return getRuleContexts(ElseIfExprContext.class);
		}
		public ElseIfExprContext elseIfExpr(int i) {
			return getRuleContext(ElseIfExprContext.class,i);
		}
		public ElseExprContext elseExpr() {
			return getRuleContext(ElseExprContext.class,0);
		}
		public IfExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).enterIfExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QMTemplateParserListener ) ((QMTemplateParserListener)listener).exitIfExpr(this);
		}
	}

	public final IfExprContext ifExpr() throws RecognitionException {
		IfExprContext _localctx = new IfExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifExpr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LEFT_BRACE);
			setState(145);
			ifKey();
			setState(146);
			evlExpr(0);
			setState(147);
			match(RIGHT_BRACE);
			setState(148);
			template();
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					elseIfExpr();
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(155);
				elseExpr();
				}
				break;
			}
			setState(158);
			blockEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
